# comparative-embedding-visualization

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  Snakefile  environment.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
lib/: colors.py  metrics.py  transformation.py
notebooks/: abundance-analysis.ipynb  colors.py  delaunay.ipynb  fashion-mnist.ipynb  getting-started.ipynb  lui-2021.ipynb  marker-logo.ipynb  metrics.py  neighborhood-analysis.ipynb  prototype.ipynb  select-neighbors.ipynb
notebooks/test_cases/: confusion.ipynb  neighborhood.ipynb
scripts/: transformation.py
src/cev/: __init__.py  _cli.py  _compare.py  _compare_metric_dropdown.py  _compare_selection_type_dropdown.py  _compare_zoom_toggle.py  _embedding.py  _embedding_comparison_widget.py  _embedding_widget.py  _label_utils.py  _version.py  _widget_utils.py  logo.py  metrics.py  transformation.py  widgets.py
src/cev/components/: __init__.py  _html_widget.py  _marker_composition_logo.py  _marker_selection_indicator.py  _width_optimizer.py
src/cev/static/: AnnotationLogo.js
src/cev/test_cases/: confusion.py  metrics.py  neighborhood.py  utils.py
src/embcomp/: __init__.py  _widget_utils.py  colors.py  logo.py  metrics.py  widgets.py
src/embcomp/static/: AnnotationLogo.js  logo.js
src/embcomp/test_cases/: confusion.py  metrics.py  neighborhood.py  utils.py
tests/: test_cev.py  test_widget_utils.py
