[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cev"
description = "comparative embedding visualization"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Trevor Manz" },
    { name = "Fritz Lekschas" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8,<3.11"
dependencies = [
    "anywidget",
    "ipywidgets>=8.0.0",
    "jinja2",
    "jupyter-scatter>=0.9.0",
    "matplotlib",
    "numba>=0.56.4",
    "pandas",
    "traittypes",
    "umap-learn",
    "scipy",
]
dynamic = ["version"]

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "jupyterlab",
    "pytest",
    "rich",
    "ruff",
]
notebooks = [
    "snakemake",
    "seaborn",
    "pyarrow",
    "fastparquet"
]

[project.urls]
homepage = "https://github.com/OzetteTech/comparative-embedding-visualization"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
python = "3.10"
features = ["dev", "notebooks"]

[tool.hatch.envs.default.scripts]
fmt = [
    "black .",
    "ruff --fix .",
]
check = [
    "black --check --diff .",
    "ruff .",
]

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",    # style errors
    "F",    # flake
    # "D",    # pydocstyle
    "I001", # isort
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = ["E501"] # ignore line-length, enforced by black
